--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="e_allready_reported">You have already reported this message.</string>
     <string name="no_network_connection">You do not have a connection to the internet.</string>
 
-    <!-- New strings -->
+    <!-- Enterprise strings -->
     <string name="spika_big">SPIKA</string>
     <string name="spika_enterprise">Enterprise Messeging</string>
     <string name="username">Username</string>
