--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -85,7 +85,7 @@
     <string name="password">Password</string>
     <string name="login_big">LOGIN</string>
     <string name="hi">Hi!</string>
-    <string name="john_doe">John Doe</string>
+    <string name="john_doe">Vasilije Dimitrejev</string>
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
     <string name="lobby">Lobby</string>
