--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="e_invalid_token">Invalid token, choose a character again.</string>
     <string name="e_expired_token">Token expired, choose a character again.</string>
     <string name="e_allready_reported">You have already reported this message.</string>
+    <string name="e_exceed_voice_duration">Exceeded record time.</string>
     <string name="no_network_connection">You do not have a connection to the internet.</string>
 
     <!-- Enterprise strings -->
@@ -94,6 +95,7 @@
     <string name="title_lobby">Lobby</string>
     <string name="camera">Camera</string>
     <string name="video">Video</string>
+    <string name="audio">Audio</string>
     <string name="location">Location</string>
     <string name="record">Record</string>
     <string name="gallery">Gallery</string>
