--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -79,10 +79,11 @@
     <string name="e_allready_reported">You have already reported this message.</string>
     <string name="e_exceed_voice_duration">Exceeded record time.</string>
     <string name="no_network_connection">You do not have a connection to the internet.</string>
+    <string name="e_google_play_error">Google Play Services error.</string>
 
     <!-- Enterprise strings -->
     <string name="spika_big">SPIKA</string>
-    <string name="spika_enterprise">Enterprise Messeging</string>
+    <string name="spika_enterprise">Enterprise Messaging</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login_big">LOGIN</string>
@@ -101,6 +102,7 @@
     <string name="record">Record</string>
     <string name="gallery">Gallery</string>
     <string name="invalid_token_message">INVALID TOKEN</string>
+    <string name="msg_from">You have received a message from</string>
 
     <!-- PullToRefresh -->
     <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
