--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -61,23 +61,14 @@
     <string name="e_while_loading_image_from_gallery">Error while loading image from gallery.</string>
     <string name="e_failed_openning_camera">Error while openning camera.</string>
     <string name="e_no_camera_on_device">No camera on device.</string>
-    <string name="e_video_to_long">Video is to long.</string>
-    <string name="e_something_went_wrong_again">Something went wrong.</string>
+    <string name="e_record_time_to_long">Record time is to long.</string>
     <string name="e_something_went_wrong_while_taking_a_picture">Something went wrong while taking a picture.</string>
-    <string name="e_video_too_long">Video is too long.</string>
     <string name="e_failed_while_sending">Failed while sending.</string>
     <string name="e_error_downloading_file">Error while downloading a file.</string>
     <string name="e_error_uploading_file">Error while uploading a file.</string>
-    <string name="block_email">Email is empty or not valid.</string>
-    <string name="block_content">Message body is empty.</string>
-    <string name="e_your_acc_has_been_blocked">Your account has been blocked.</string>
     <string name="e_something_went_wrong">Something went wrong.</string>
-    <string name="e_group_has_been_deleted">The group has been deleted.</string>
-    <string name="e_ng_word_detected">Ng word detected.</string>
-    <string name="e_invalid_token">Invalid token, choose a character again.</string>
-    <string name="e_expired_token">Token expired, choose a character again.</string>
-    <string name="e_allready_reported">You have already reported this message.</string>
-    <string name="e_exceed_voice_duration">Exceeded record time.</string>
+    <string name="e_invalid_token">Invalid token.</string>
+    <string name="e_expired_token">Token expired.</string>
     <string name="no_network_connection">You do not have a connection to the internet.</string>
     <string name="e_google_play_error">Google Play Services error.</string>
     <string name="e_error_while_logout">Unable to logout, please try again.</string>
