--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -115,8 +115,12 @@
     <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
     <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
     <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
+    
     <string name="login_remember_me">Remember me</string>
     <string name="enable_passcode_label">Enable passcode</string>
+    <string name="enter_a_passcode">Enter a passcode</string>
+    <string name="enter_your_passcode">Enter your passcode</string>
+    <string name="re_enter_your_passcode">Re-enter your passcode</string>
 
     <string-array name="chat_settings_array">
         <item>Members</item>
