--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="users">Users</string>
     <string name="groups">Groups</string>
     <string name="title_lobby">Lobby</string>
+    <string name="invite">Invite</string>
     <string name="camera">Camera</string>
     <string name="video">Video</string>
     <string name="audio">Audio</string>
@@ -115,7 +116,6 @@
     <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
     <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
     <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
-    
     <string name="login_remember_me">Remember me</string>
     <string name="enable_passcode_label">Enable passcode</string>
     <string name="enter_a_passcode">Enter a passcode</string>
@@ -124,7 +124,7 @@
 
     <string-array name="chat_settings_array">
         <item>Members</item>
-        <item>Item1</item>
+        <item>Invite</item>
         <item>Item2</item>
         <item>Item3</item>
     </string-array>
