--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="take_video">TAKE VIDEO</string>
     <string name="dont_show_info">Do not show info.</string>
     <string name="delete_group">You are about to delete selected group.</string>
+    <string name="delete_message_confirmation">Are you sure you want to delete this message?</string>
     <string name="select_members">Select members</string>
     <string name="create_group">Create group</string>
     <string name="group_name">Group name</string>
