#9 login errors are now properly displayed to user

--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -60,7 +60,7 @@
     <!-- Error strings -->
     <string name="e_no_network_connection">You have no internet connection.</string>
     <string name="e_while_loading_image_from_gallery">Error while loading image from gallery.</string>
-    <string name="e_failed_openning_camera">Error while openning camera.</string>
+    <string name="e_failed_openning_camera">Error while opening camera.</string>
     <string name="e_no_camera_on_device">No camera on device.</string>
     <string name="e_record_time_to_long">Record time is to long.</string>
     <string name="e_something_went_wrong_while_taking_a_picture">Something went wrong while taking a picture.</string>
