--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="blocked_text_1">You Have Been Blocked</string>
     <string name="blocked_text_2">Write an explanation in textfield below.</string>
     <string name="send">Send</string>
+    <string name="create_room">Create Room</string>
+    <string name="create">Create</string>
 
     <!-- Error strings -->
     <string name="e_no_network_connection">You have no internet connection.</string>
