--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -158,5 +158,6 @@
         <item>Activate</item>
         <item>Delete</item>
     </string-array>
+        <string name="selected_users">"Selected users: "</string>
 
 </resources>
