--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="send">Send</string>
     <string name="create_room">Create room</string>
     <string name="create">Create</string>
-    <string name="searchUsers">Search users</string>
+    <string name="searchUsers">Search users and groups</string>
     <string name="enterRoomName">Enter room name</string>
     <string name="enableEditPhoto">Do you want to use full size or cropped image?</string>
     <string name="compression_confirmation_question">Do you want to send compressed image?</string>
@@ -165,7 +165,7 @@
         <item>Activate</item>
         <item>Delete</item>
     </string-array>
-    <string name="selected_users">"Selected users: "</string>
+    <string name="selected_users">"Selected: "</string>
     <string name="you_didn_t_select_any_users">You didn\'t select any users</string>
     <string name="all">All</string>
 
