--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -185,5 +185,9 @@
         <string name="none">None</string>
         <string name="information">Information</string>
         <string name="next">Next</string>
+        
+        <!-- NEW STRINGS -->
+         <string name="yes">Yes</string>
+          <string name="no">No</string>
 
 </resources>
