bugovi od yumiko

--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -189,5 +189,6 @@
         <!-- NEW STRINGS -->
          <string name="yes">Yes</string>
           <string name="no">No</string>
+          <string name="are_you_sure_">Are you sure?</string>
 
 </resources>
