lillipop push notifications, new font in adapters, option for first view chat profile than start chat

--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -244,5 +244,7 @@
     <string name="change">Change</string>
     <string name="admin">(admin)</string>
     <string name="version">Version:</string>
+    <string name="group">group</string>
+    <string name="room">room</string>
 
 </resources>
