--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -255,5 +255,8 @@
     <string name="people">People</string>
     <string name="location_tap_to_view">Location: Tap to view</string>
     <string name="video_tap_to_play">Video: Tap to play</string>
+    <string name="loading_older_messages">Loading older messages</string>
+    <string name="search_for_people">Search for people</string>
+    <string name="search_for_groups">Search for groups</string>
 
 </resources>
