reset service in background

--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -352,5 +352,7 @@
     <string name="pref_displayhud_default" translatable="false">false</string>
     <string name="user_is_not_available_at_the_moment_do_you_want_to_leave_voice_message_">User is not available at the moment. Do you want to leave voice message?</string>
     <string name="_didn_t_answer_on_your_call_do_you_want_to_leave_voice_message_">" didn't answer on your call. Do you want to leave voice message?"</string>
+    <string name="touch_to_return_to_call">Touch to return to call</string>
+    <string name="other_call_is_in_progress">Other call is in progress</string>
     
 </resources>
