--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -354,5 +354,6 @@
     <string name="_didn_t_answer_on_your_call_do_you_want_to_leave_voice_message_">" didn't answer on your call. Do you want to leave voice message?"</string>
     <string name="touch_to_return_to_call">Touch to return to call</string>
     <string name="other_call_is_in_progress">Other call is in progress</string>
+    <string name="choose_take_video">Choose/Take video</string>
     
 </resources>
