--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -355,5 +355,10 @@
     <string name="touch_to_return_to_call">Touch to return to call</string>
     <string name="other_call_is_in_progress">Other call is in progress</string>
     <string name="choose_take_video">Choose/Take video</string>
+    <string name="please_update_your_google_play_service_for_receiving_push_notification_">Please update Your Google Play Service for receiving push notification.</string>
+    <string name="please_install_google_play_service_for_receiving_push_notification_">Please install Google Play Service for receiving push notification.</string>
+    <string name="resend">Resend</string>
+    <string name="resend_message">Resend Message</string>
+    <string name="no_internet_connection_">No Internet connection!</string>
     
 </resources>
