--- a/SpikaEnterprise/res/values/strings.xml
+++ b/SpikaEnterprise/res/values/strings.xml
@@ -102,7 +102,7 @@
     <string name="e_username_not_exist">This username does not exist</string>
 
     <!-- Enterprise strings -->
-    <string name="spika_big">SPIKA</string>
+    <string name="spika_big">SPIKA ENTERPRISE</string>
     <string name="spika_enterprise">Enterprise Messaging</string>
     <string name="username">Username</string>
     <string name="new_password">Enter a new password</string>
@@ -360,8 +360,8 @@
     <string name="resend">Resend</string>
     <string name="resend_message">Resend Message</string>
     <string name="no_internet_connection_">No Internet connection!</string>
-    <string name="e_organization_deleted">This account is disabled. Please ask user support about detail.</string>
-    <string name="e_organization_suspended">This account is currently suspended. Please ask user support about detail.</string>
+    <string name="e_organization_deleted">Selected organization has been disabled. Please contact user support for more details.</string>
+    <string name="e_organization_suspended">Selected organization has been currently suspended. Please contact user support for more details.</string>
     <string name="e_room_limit_exceeded">Your organization has exceeded room limit and cannot create new rooms any more.</string>
     <string name="e_file_limit_exceeded">Your organization has exceeded file upload. Please contact yout administrator for more details.</string>
     
